Fix map size on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: 100%;
 }
 
 #map {
@@ -9,7 +9,7 @@ html, body {
   top: 0;
   bottom: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   z-index: 0;  /* Lowest layer */
 }
 
@@ -19,6 +19,7 @@ html, body {
   left: 0;
   right: 0;
   bottom: 0;
+  height: 100%;
   background: rgba(0, 0, 0, 0.6);  /* semi-transparent black */
   z-index: 1;  /* place it above the map, but below other content */
 }
